--- a/Tesis_Escrito/TeX_files/Bibliography.bib
+++ b/Tesis_Escrito/TeX_files/Bibliography.bib
@@ -116,3 +116,112 @@
 	booktitle={NIPS Workshop on Bayesian Optimization},
 	year={2013}
 }
+
+@article{friedman1991multivariate,
+	title={Multivariate adaptive regression splines},
+	author={Friedman, Jerome H},
+	journal={The annals of statistics},
+	volume={19},
+	number={1},
+	pages={1--67},
+	year={1991},
+	publisher={Institute of Mathematical Statistics}
+}
+
+@book{breiman2017classification,
+	title={Classification and regression trees},
+	author={Breiman, Leo},
+	year={2017},
+	publisher={Routledge}
+}
+
+@article{denison1998bayesian,
+	title={Bayesian mars},
+	author={Denison, David GT and Mallick, Bani K and Smith, Adrian FM},
+	journal={Statistics and Computing},
+	volume={8},
+	pages={337--346},
+	year={1998},
+	publisher={Springer}
+}
+
+@article{green1995reversible,
+	title={Reversible jump Markov chain Monte Carlo computation and Bayesian model determination},
+	author={Green, Peter J},
+	journal={Biometrika},
+	volume={82},
+	number={4},
+	pages={711--732},
+	year={1995},
+	publisher={Oxford University Press}
+}
+
+@article{francom2020bass,
+	title={Bass: An r package for fitting and performing sensitivity analysis of bayesian adaptive spline surfaces},
+	author={Francom, Devin and Sans{\'o}, Bruno},
+	journal={Journal of Statistical Software},
+	volume={94},
+	number={LA-UR-20-23587},
+	year={2020},
+	publisher={Los Alamos National Lab.(LANL), Los Alamos, NM (United States)}
+}
+
+@book{rubinstein2016simulation,
+	title={Simulation and the Monte Carlo method},
+	author={Rubinstein, Reuven Y and Kroese, Dirk P},
+	year={2016},
+	publisher={John Wiley \& Sons}
+}
+
+@book{robert1999monte,
+	title={Monte Carlo statistical methods},
+	author={Robert, Christian P and Casella, George and Casella, George},
+	volume={2},
+	year={1999},
+	publisher={Springer}
+}
+
+@inproceedings{bergstra2013hyperopt,
+	title={Hyperopt: A python library for optimizing the hyperparameters of machine learning algorithms},
+	author={Bergstra, James and Yamins, Dan and Cox, David D and others},
+	booktitle={Proceedings of the 12th Python in science conference},
+	volume={13},
+	pages={20},
+	year={2013},
+	organization={Citeseer}
+}
+
+@article{balandat2020botorch,
+	title={BoTorch: A framework for efficient Monte-Carlo Bayesian optimization},
+	author={Balandat, Maximilian and Karrer, Brian and Jiang, Daniel and Daulton, Samuel and Letham, Ben and Wilson, Andrew G and Bakshy, Eytan},
+	journal={Advances in neural information processing systems},
+	volume={33},
+	pages={21524--21538},
+	year={2020}
+}
+
+@inproceedings{akiba2019optuna,
+	title={Optuna: A next-generation hyperparameter optimization framework},
+	author={Akiba, Takuya and Sano, Shotaro and Yanase, Toshihiko and Ohta, Takeru and Koyama, Masanori},
+	booktitle={Proceedings of the 25th ACM SIGKDD international conference on knowledge discovery \& data mining},
+	pages={2623--2631},
+	year={2019}
+}
+
+@inproceedings{kaufmann2012thompson,
+	title={Thompson sampling: An asymptotically optimal finite-time analysis},
+	author={Kaufmann, Emilie and Korda, Nathaniel and Munos, R{\'e}mi},
+	booktitle={International conference on algorithmic learning theory},
+	pages={199--213},
+	year={2012},
+	organization={Springer}
+}
+
+@inproceedings{kaufmann2012bayesian,
+	title={On Bayesian upper confidence bounds for bandit problems},
+	author={Kaufmann, Emilie and Capp{\'e}, Olivier and Garivier, Aur{\'e}lien},
+	booktitle={Artificial intelligence and statistics},
+	pages={592--600},
+	year={2012},
+	organization={PMLR}
+}
