--- a/Tesis_Escrito/TeX_files/GP.tex
+++ b/Tesis_Escrito/TeX_files/GP.tex
@@ -179,7 +179,7 @@ The scope of this work does not cover this theory in as much detail as the autho
 Which is equivalent to saying that $\pi^T = \pi^T P$.
 \end{proof}
 
-If we construct a Markov chain in a way that it is ergodic an control the distribution $\pi$ so that it is something that we want, we can guarantee that after a sufficiently large amount of iterations $n$ we will be sampling from the stationary distribution of the process, which is invariant through time because of the property presented in the above theorem. This is the crux of understanding the Markov Chain Monte Carlo technique which is the central object of study of this section. Delving into the construction of the Metropolis-Hastings algorithm and the fundamental building blocks needed to construct these chains that eventually lead to interesting stationary distributions would make this work exceedingly long, but \textcolor{red}{MISSING REFERENCE} and \textcolor{red}{MISSING REFERENCE} are good resources for a detailed rundown of these topics. We will return much later in this work when discussing the BASS method to MCMC and why it is so essential to this process. We will not look at pure MCMC though but an interesting modification to the base algorithm known as the Reversible Jump Markov Chain Monte Carlo (RJMCMC) algorithm. 
+If we construct a Markov chain in a way that it is ergodic an control the distribution $\pi$ so that it is something that we want, we can guarantee that after a sufficiently large amount of iterations $n$ we will be sampling from the stationary distribution of the process, which is invariant through time because of the property presented in the above theorem. This is the crux of understanding the Markov Chain Monte Carlo technique which is the central object of study of this section. Delving into the construction of the Metropolis-Hastings algorithm and the fundamental building blocks needed to construct these chains that eventually lead to interesting stationary distributions would make this work exceedingly long, but \cite{rubinstein2016simulation} and \cite{robert1999monte} are good resources for a detailed rundown of these topics. We will return much later in this work when discussing the BASS method to MCMC and why it is so essential to this process. We will not look at pure MCMC though but an interesting modification to the base algorithm known as the Reversible Jump Markov Chain Monte Carlo (RJMCMC) algorithm. 
 
 For now though we move on to the other interesting sub-case of stochastic processes relevant to this work, the continuous-time Gaussian Process. 
 
@@ -191,11 +191,19 @@ A Gaussian process can be thought of as a generalization of the Gaussian (normal
 	Let $\{ t_i \}_{i \leq k}$ be a sequence of points\footnote{Sometimes referred to as time points, considering this index not as an abstract set but a representation of the progress of time as indexed by a subset of the positive reals.} such that $\{ t_i \}_{i \leq k} \subseteq T$. The $k$-dimensional random vector $(X_{t_1}, X_{t_2}, \ldots, X_{t_k})$ has a distribution $\mu_{t_1, t_2, \ldots, t_k}$ over $\mathbb{R}^k$. These measures $\mu_{t_1, t_2, \ldots, t_k}$ are the finite dimensional distributions of the process. 
 \end{definition}
 
-One logical follow up is to ask if the inverse of this definition is also true. This would be, starting from a consistent\footnote{Consistency is a fuzzy term with a lot of meanings, but its meaning in this context will become clear with the theorems that follow.} joint distribution of the random variables $(X_{t_1}, X_{t_2}, \ldots, X_{t_k})$ , with $k \in \mathbb{N}$, then would it be possible to define a probability measure $\mu_{t_1, t_2, \ldots, t_k}$ on a higher cardinality set, in this case $\mathbb{R}^k$ that matches these distributions exactly? The positive answer to this question is the Kolmogorov Extension Theorem, an incredibly deep and powerful results that guarantees the existence of stochastic processes by only defining a finite set of distributions that share some consistency requirements. 
+One logical follow up is to ask if the inverse of this definition is also true. This would be, starting from a consistent\footnote{Consistency is a fuzzy term with a lot of meanings, but its meaning in this context will become clear with the theorems that follow.} joint distribution of the random variables $(X_{t_1}, X_{t_2}, \ldots, X_{t_k})$ , with $k \in \mathbb{N}$, then would it be possible to define a probability measure $\mu_{t_1, t_2, \ldots, t_k}$ on a higher cardinality set, in this case $\mathbb{R}^k$ that matches these distributions exactly? The positive answer to this question is the Kolmogorov Extension Theorem, an incredibly deep and powerful result that guarantees the existence of stochastic processes by only defining a finite set of distributions that share some consistency requirements. 
 
-\textcolor{red}{MISSING THEOREM STATEMENT AND DEEP DIVE.}
+\begin{theorem}[Kolmogorov Existence Theorem]
+	Given a collection of random variables $\{X_{t_1}, X_{t_2}, \ldots, X_{t_k}\}$, indexed by $t_1, t_2, \ldots, t_k \in \mathbb{R}$, such that for any finite subset of time points $t_{i_1}, t_{i_2}, \ldots, t_{i_m}$, the joint distribution of $(X_{t_{i_1}}, X_{t_{i_2}}, \ldots, X_{t_{i_m}})$ is consistent, there exists a stochastic process $\{X_t\}_{t \in \mathbb{R}}$ on a higher-dimensional space $\mathbb{R}^k$ such that for all $t_1, t_2, \ldots, t_k \in \mathbb{R}$, the marginal distributions of $(X_{t_1}, X_{t_2}, \ldots, X_{t_k})$ coincide with the original given distributions.
+\end{theorem}
 
-With this auxiliary distribution out of the way, we can now proceed to define the Gaussian process. 
+The Kolmogorov Existence Theorem addresses the question of whether we can construct a stochastic process given only a finite set of joint distributions. These joint distributions need to satisfy a consistency condition, which means that any finite subset of random variables should have joint distributions that are compatible with each other.
+
+The theorem states that if such consistent joint distributions exist, then it is possible to define a stochastic process on a higher-dimensional space, often denoted as $\mathbb{R}^k$, such that the original given distributions match the marginal distributions of this process. In essence, the Kolmogorov Existence Theorem provides a way to create a stochastic process that captures the dependencies and correlations between random variables at different time points, even when we only have limited information about their joint distributions. 
+
+In the case of Gaussian processes, this means that if we have a finite set of random variables following consistent joint Gaussian distributions, we can construct a Gaussian process on a continuous domain (typically a subset of $\mathbb{R}$) such that any finite subset of the process is jointly Gaussian with the desired covariance structure. 
+
+With this auxiliary distribution out of the way, we can now proceed to define the Gaussian process formally. 
 
 \begin{definition}
 	Let $\{ X_t: t \in \mathbb{R}^+ \}$ be a continuous-time stochastic process. We call $\{ X_t: t \in \mathbb{R}^+ \}$ a Gaussian process if for every set $\{ t_i \}_{i \leq k}$ and every finite $k$, the finite-dimensional distribution of the $k$-dimensional random vector $(X_{t_1}, X_{t_2}, \ldots, X_{t_k})$ has a Gaussian multivariate distribution when $k>1$ and a Gaussian univariate distribution when $k=1$. 
